[TASK] run tests on other branches too, add coverage workflow for coveralls

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,5 @@
 name: tests
-on:
-  # trigger workflow on push and pull requests on the master branch
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: ["push", "pull_request"]
 
 jobs:
   test:
