--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,11 @@ on:
     # run tests regularly at 3 AM every days to check if CloudFlare updated their detection
     - cron: '* 3 * * *'
 
+env:
+  PROXY_HOST: ${{ secrets.PROXY_HOST }}
+  PROXY_USER: ${{ secrets.PROXY_USER }}
+  PROXY_PASS: ${{ secrets.PROXY_PASS }}
+
 jobs:
   test:
     strategy:
