--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,15 +13,17 @@ on:
     - cron: '0 3 * * *'
 
 env:
-  PROXY_HOST: ${{ secrets.PROXY_HOST }}
   PROXY_USER: ${{ secrets.PROXY_USER }}
   PROXY_PASS: ${{ secrets.PROXY_PASS }}
+  PROXY_HOST_HTTPS: ${{ secrets.PROXY_HOST_HTTPS }}
+  PROXY_PORT_HTTPS: ${{ secrets.PROXY_PORT_HTTPS }}
+  PROXY_HOST_SOCKS5: ${{ secrets.PROXY_HOST_SOCKS5 }}
 
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x]
+        go-version: [1.17.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
